--- a/404.html
+++ b/404.html
@@ -1,25 +1,13 @@
 ---
 permalink: /404.html
+title: 404 not found -- (dafuq?)
 layout: default
 ---
 
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
+<img src="/assets/img/404.gif" />
 
-<div class="container">
-  <h1>404</h1>
+<h2>404</h2>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
-</div>
+<p><strong>Page not found :(</strong></p>
+<p>The requested page could not be found.</p>
+<p><a href="/">Click here</a> to return to the homepage.</p>
